[package]
name = "bmbp_auth"
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP AUTH"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_auth"
repository = "https://github.com/bmbper/bmbp_auth"
documentation = "https://github.com/bmbper/bmbp_auth"
[dependencies]
bmbp_bean = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
salvo = { version = "0.74.2" }
async-trait = "0.1.83"
uuid = { version = "1.11.0", features = ["v4"] }